# cppcon2025-minimal-example

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
.github/workflows/: ci copy.yml  ci-no-pixi.yml  ci.yml
src/cpp-package/: CMakeLists.txt  main.cpp  pixi.toml
src/python-package/: pyproject.toml
src/python-package/src/python_package/: main.py
